No prod worker for now

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -776,7 +776,7 @@ Resources:
         EcrImageTag: !Ref CmsEcrImageTag
         SecretsVersion: !Ref CmsSecretsVersion
         AppName: "cms"
-        CreateWorker: "true"
+        CreateWorker: !If [IsProduction, "false", "true"]
         ContainerPort: "3000"
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
         ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
