Fix Ike alarm name

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -928,7 +928,7 @@ Resources:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: "[Infra][Notif][Lambda][Errors] Ike Slack Commands Handler"
+      AlarmName: "[Infra][Notif][Lambda][Errors] Ike Slash Commands Handler"
       AlarmActions:
         - !Ref OpsWarnMessagesSnsTopic
       InsufficientDataActions:
