Replace Slack verif. tokens with signing secrets
Closes #245

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -18,6 +18,7 @@ Metadata:
           default: Slack Tokens
         Parameters:
           - IkeSlackVerificationToken
+          - IkeSlackSigningSecret
       - Label:
           default: Slack Webhooks
         Parameters:
@@ -39,6 +40,8 @@ Metadata:
         default: Ike Deploys
       IkeSlackVerificationToken:
         default: Ike Verification Token
+      IkeSlackSigningSecret:
+        default: Ike Signing Secret
       SnsTopicPolicyPublishAllowanceAccountIds:
         default: "SNS:Publish Account IDs"
       SnsTopicPolicyPublishAllowanceOrganizationId:
@@ -61,6 +64,8 @@ Parameters:
   IkeDeploysSlackSlackWebhookUrl:
     Type: String
   IkeSlackVerificationToken:
+    Type: String
+  IkeSlackSigningSecret:
     Type: String
   SnsTopicPolicyPublishAllowanceAccountIds:
     Type: CommaDelimitedList
@@ -854,6 +859,7 @@ Resources:
       Environment:
         Variables:
           SLACK_VERIFICATION_TOKEN: !Ref IkeSlackVerificationToken
+          SLACK_SIGNING_SECRET: !Ref IkeSlackSigningSecret
           INFRASTRUCTURE_CONFIG_BUCKET:
             Fn::ImportValue:
               !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
@@ -882,7 +888,7 @@ Resources:
         Handles requests from Slack for slash commands
       Environment:
         Variables:
-          SLACK_VERIFICATION_TOKEN: !Ref IkeSlackVerificationToken
+          SLACK_SIGNING_SECRET: !Ref IkeSlackSigningSecret
           INFRASTRUCTURE_CONFIG_BUCKET:
             Fn::ImportValue:
               !Sub ${InfrastructureStorageStackName}-InfrastructureConfigBucket
