Remove Slack verif. token vestiges

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -15,9 +15,8 @@ Metadata:
         Parameters:
           - InfrastructureConfigStagingKey
       - Label:
-          default: Slack Tokens
+          default: Slack Secrets
         Parameters:
-          - IkeSlackVerificationToken
           - IkeSlackSigningSecret
       - Label:
           default: Slack Webhooks
@@ -38,8 +37,6 @@ Metadata:
         default: Generic Incoming Webhook
       IkeDeploysSlackSlackWebhookUrl:
         default: Ike Deploys
-      IkeSlackVerificationToken:
-        default: Ike Verification Token
       IkeSlackSigningSecret:
         default: Ike Signing Secret
       SnsTopicPolicyPublishAllowanceAccountIds:
@@ -62,8 +59,6 @@ Parameters:
   GenericSlackWebhookUrl:
     Type: String
   IkeDeploysSlackSlackWebhookUrl:
-    Type: String
-  IkeSlackVerificationToken:
     Type: String
   IkeSlackSigningSecret:
     Type: String
@@ -858,7 +853,6 @@ Resources:
         Handles requests from Slack for interactive messages
       Environment:
         Variables:
-          SLACK_VERIFICATION_TOKEN: !Ref IkeSlackVerificationToken
           SLACK_SIGNING_SECRET: !Ref IkeSlackSigningSecret
           INFRASTRUCTURE_CONFIG_BUCKET:
             Fn::ImportValue:
