Make the container apps only run in staging, so test should pass, and we can deploy to prod

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -12,6 +12,7 @@ Description: >
   in separate templates.
 Conditions:
   IsUsEast1: !Equals [!Ref "AWS::Region", us-east-1]
+  IsStaging: !Equals [!Ref EnvironmentType, Staging]
 Parameters:
   AwsOrganizationId:
     Type: String
@@ -234,6 +235,7 @@ Resources:
       TimeoutInMinutes: 5
   ContainerAppsRootStack:
     Type: "AWS::CloudFormation::Stack"
+    Condition: IsStaging
     DependsOn: ECSClusterStack
     Properties:
       NotificationARNs:
