--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -980,9 +980,9 @@ Resources:
           Type: A
           Name: !Sub m.${Domain}
         - ResourceRecords:
-            - "199.119.122.233"
+            - cms.prx.tech.
           TTL: "300"
-          Type: A
+          Type: CNAME
           Name: !Sub cms.${Domain}
         - ResourceRecords:
             - "199.119.122.233"
