--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -143,7 +143,7 @@ Resources:
         EcrImageTag: !Ref CmsEcrImageTag
         SecretsVersion: !Ref CmsSecretsVersion
         AppName: "cms"
-        CreateWorker: !If [IsProduction, "false", "true"]
+        CreateWorker: "true"
         ContainerPort: "3000"
         HealthCheckPath: "/api/v1"
       Tags:
