Explicit total instances, to get cluster mode working

--- a/db/elasticache-redis.yml
+++ b/db/elasticache-redis.yml
@@ -46,12 +46,6 @@ Parameters:
       - 2
       - 3
       - 4
-      - 5
-      - 6
-      - 7
-      - 8
-      - 9
-      - 10
   NumReplicas:
     Description: The number of replicas per shard
     Type: Number
@@ -61,6 +55,27 @@ Parameters:
       - 1
       - 2
       - 3
+  TotalInstances:
+    Description: Multiply numShards * (numReplicas + 1)
+    Type: Number
+    Default: 2
+    AllowedValues:
+      - 1
+      - 2
+      - 3
+      - 4
+      - 5
+      - 6
+      - 7
+      - 8
+      - 9
+      - 10
+      - 11
+      - 12
+      - 13
+      - 14
+      - 15
+      - 16
   VPCStack:
     Description: VPC stack to add this cache into
     Type: String
@@ -99,10 +114,10 @@ Resources:
       ClusterName: !Ref ClusterName
       Engine: "redis"
       EngineVersion: "4.0.10"
-      NumCacheNodes: !Ref NumShards
-      PreferredMaintenanceWindow: mon:08:00-mon:09:00
+      NumCacheNodes: !Ref TotalInstances
+      PreferredMaintenanceWindow: "mon:08:00-mon:09:00"
       SnapshotRetentionLimit: 7
-      SnapshotWindow: 06:00-07:00
+      SnapshotWindow: "06:00-07:00"
       VpcSecurityGroupIds:
         - !GetAtt ElasticacheSecurityGroup.GroupId
       Tags:
