Move staging castle redis

--- a/stacks/analytics-ingest-lambda.yml
+++ b/stacks/analytics-ingest-lambda.yml
@@ -26,9 +26,9 @@ Mappings:
       vpcsecurity: ""
       vpcsubnets: ""
     stag:
-      redishost: "prx-castle-staging.bbsmj9.0001.use1.cache.amazonaws.com"
-      vpcsecurity: "sg-8128d3f8"
-      vpcsubnets: "subnet-89ac7dff,subnet-79442344"
+      redishost: "castle-staging.fangjt.0001.use1.cache.amazonaws.com"
+      vpcsecurity: "sg-1f40c46e"
+      vpcsubnets: "subnet-8cb5c8c4,subnet-d90b37e5,subnet-7e24b324"
     prod:
       redishost: "prx-castle-prod.bbsmj9.0001.use1.cache.amazonaws.com"
       vpcsecurity: "sg-c6eb1da1"
