Make alarms breach on missing data, use double quotes, and change yaml syntax for arrays

--- a/db/replication-alarms.yml
+++ b/db/replication-alarms.yml
@@ -3,7 +3,7 @@ Description: >
   Creates alarms related to ssh tunnel remote server -> rds db replication
 Parameters:
   OpsWarnSnsTopic:
-    Default: ''
+    Default: ""
     Description: ops warn SNS Topic arn
     Type: String
   EnvironmentType:
@@ -12,11 +12,11 @@ Parameters:
       - staging
       - production
   DatabaseName:
-    Default: 'mediajoint_production'
+    Default: mediajoint_production
     Description: Name of the database
     Type: String
   TunnelInstanceId:
-    Default: ''
+    Default: ""
     Description: Instance id (i.e. i-something) of the EC2 server
     Type: String
 Resources:
@@ -25,9 +25,12 @@ Resources:
     Properties:
       ActionsEnabled: true
       AlarmName: !Sub "[Replication][${EnvironmentType}][SlaveIORunning] Not running"
-      AlarmActions: [!Ref OpsWarnSnsTopic]
-      InsufficientDataActions: [!Ref OpsWarnSnsTopic]
-      OKActions: [!Ref OpsWarnSnsTopic]
+      AlarmActions:
+        - !Ref OpsWarnSnsTopic
+      InsufficientDataActions:
+        - !Ref OpsWarnSnsTopic
+      OKActions:
+        - !Ref OpsWarnSnsTopic
       AlarmDescription: IO replication not running
       ComparisonOperator: LessThanThreshold
       Dimensions:
@@ -43,16 +46,19 @@ Resources:
       Period: 60
       Statistic: Average
       Threshold: 1
-      TreatMissingData: notBreaching
+      TreatMissingData: breaching
       Unit: Count
   ReplicationSqlHaltedAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
       AlarmName: !Sub "[Replication][${EnvironmentType}][SlaveSQLRunning] Not running"
-      AlarmActions: [!Ref OpsWarnSnsTopic]
-      InsufficientDataActions: [!Ref OpsWarnSnsTopic]
-      OKActions: [!Ref OpsWarnSnsTopic]
+      AlarmActions:
+        - !Ref OpsWarnSnsTopic
+      InsufficientDataActions:
+        - !Ref OpsWarnSnsTopic
+      OKActions:
+        - !Ref OpsWarnSnsTopic
       AlarmDescription: SQL replication not running
       ComparisonOperator: LessThanThreshold
       Dimensions:
@@ -68,16 +74,19 @@ Resources:
       Period: 60
       Statistic: Average
       Threshold: 1
-      TreatMissingData: notBreaching
+      TreatMissingData: breaching
       Unit: Count
   ReplicationBehindMasterAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
       AlarmName: !Sub "[Replication][${EnvironmentType}][SecondsBehindMaster] Too far behind"
-      AlarmActions: [!Ref OpsWarnSnsTopic]
-      InsufficientDataActions: [!Ref OpsWarnSnsTopic]
-      OKActions: [!Ref OpsWarnSnsTopic]
+      AlarmActions:
+        - !Ref OpsWarnSnsTopic
+      InsufficientDataActions:
+        - !Ref OpsWarnSnsTopic
+      OKActions:
+        - !Ref OpsWarnSnsTopic
       AlarmDescription: SQL replication too far behind master
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
