AWS::NoValue for user/pass when using snapshot

--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -146,7 +146,6 @@ Resources:
         - Fn::ImportValue:
             !Sub ${VPCStack}-Subnet2
   MasterDB:
-    Condition: CreateDB
     Type: "AWS::RDS::DBInstance"
     Properties:
 # CloudFormation cannot update a stack when a custom-named resource requires replacing,
@@ -157,14 +156,31 @@ Resources:
         - NamedInstance
         - Ref: DBInstance
         - Ref: AWS::NoValue
-      DBName: !Ref CreateDBName
+      DBName:
+        Fn::If:
+        - CreateDB
+        - Ref: CreateDBName
+        - Ref: AWS::NoValue
       AllocatedStorage: !Ref DBAllocatedStorage
       StorageType: gp2
       DBInstanceClass: !Ref DBInstanceClass
+      DBSnapshotIdentifier:
+        Fn::If:
+        - UseSnapshot
+        - Ref: DBSnapshot
+        - Ref: AWS::NoValue
       Engine: MySQL
       EngineVersion: 5.5.46
-      MasterUsername: !Ref DBUser
-      MasterUserPassword: !Ref DBPassword
+      MasterUsername:
+        Fn::If:
+        - UseSnapshot
+        - Ref: AWS::NoValue
+        - Ref: DBUser
+      MasterUserPassword:
+        Fn::If:
+        - UseSnapshot
+        - Ref: AWS::NoValue
+        - Ref: DBPassword
       MultiAZ: false
       Tags:
         - Key: Project
@@ -184,43 +200,6 @@ Resources:
 # It does not change with other stack updates if set manually
 #     PubliclyAccessible: true
     DeletionPolicy: Snapshot
-  RestoreDB:
-    Condition: UseSnapshot
-    Type: "AWS::RDS::DBInstance"
-    Properties:
-# CloudFormation cannot update a stack when a custom-named resource requires replacing,
-# so when replacement is required (such as when restoring from snapshot),
-# use a new instance name such as oldname-restoredYYYYMMDD
-      DBInstanceIdentifier:
-        Fn::If:
-        - NamedInstance
-        - Ref: DBInstance
-        - Ref: AWS::NoValue
-      AllocatedStorage: !Ref DBAllocatedStorage
-      StorageType: gp2
-      DBInstanceClass: !Ref DBInstanceClass
-      DBSnapshotIdentifier: !Ref DBSnapshot
-      Engine: MySQL
-      EngineVersion: 5.5.46
-      MultiAZ: false
-      Tags:
-        - Key: Project
-          Value: cms.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: "prx:cloudformation:stack-name"
-          Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
-          Value: !Ref AWS::StackId
-      DBSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-db
-# The MySQL_replication_tunnel security group is added and removed manually for use during migration
-#     VPCSecurityGroups: [!Ref EC2SecurityGroup]
-# replication won't connect via tunnel if false
-# Post migration, we want to set PubliclyAccessible to false
-# But we have to set this manually because if flipped with a stack update, the RDS instance is rebuilt
-# It does not change with other stack updates if set manually
-#     PubliclyAccessible: true
-    DeletionPolicy: Snapshot    
   DiskSpaceAlarm:
     Condition: CreateCloudWatchWarnDiskSpace
     Type: "AWS::CloudWatch::Alarm"
