--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -147,6 +147,7 @@ Resources:
             !Sub ${VPCStack}-Subnet2
   MasterDB:
     Type: "AWS::RDS::DBInstance"
+    DependsOn: RDSSubnetGroup
     Properties:
 # CloudFormation cannot update a stack when a custom-named resource requires replacing,
 # so when replacement is required (such as when restoring from snapshot),
