--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -152,36 +152,16 @@ Resources:
 # CloudFormation cannot update a stack when a custom-named resource requires replacing,
 # so when replacement is required (such as when restoring from snapshot),
 # use a new instance name such as oldname-restoredYYYYMMDD
-      DBInstanceIdentifier:
-        Fn::If:
-        - NamedInstance
-        - Ref: DBInstance
-        - Ref: AWS::NoValue
-      DBName:
-        Fn::If:
-        - CreateDB
-        - Ref: CreateDBName
-        - Ref: AWS::NoValue
+      DBInstanceIdentifier: !If [NamedInstance, !Ref DBInstance, !Ref "AWS::NoValue"]
+      DBName: !If [CreateDB, !Ref CreateDBName, !Ref "AWS::NoValue"]
       AllocatedStorage: !Ref DBAllocatedStorage
       StorageType: gp2
       DBInstanceClass: !Ref DBInstanceClass
-      DBSnapshotIdentifier:
-        Fn::If:
-        - UseSnapshot
-        - Ref: DBSnapshot
-        - Ref: AWS::NoValue
+      DBSnapshotIdentifier: !If [UseSnapshot, !Ref DBSnapshot, !Ref "AWS::NoValue"]
       Engine: MySQL
       EngineVersion: 5.5.46
-      MasterUsername:
-        Fn::If:
-        - UseSnapshot
-        - Ref: AWS::NoValue
-        - Ref: DBUser
-      MasterUserPassword:
-        Fn::If:
-        - UseSnapshot
-        - Ref: AWS::NoValue
-        - Ref: DBPassword
+      MasterUsername: !If [UseSnapshot, !Ref "AWS::NoValue", !Ref DBUser]
+      MasterUserPassword: !If [UseSnapshot, !Ref "AWS::NoValue", !Ref DBPassword]
       MultiAZ: false
       Tags:
         - Key: Project
