update comments to be opinionated about using a new stack for restores

--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -152,6 +152,7 @@ Resources:
 # CloudFormation cannot update a stack when a custom-named resource requires replacing,
 # so when replacement is required (such as when restoring from snapshot),
 # use a new instance name such as oldname-restoredYYYYMMDD
+# Better yet to self manage tearing down of the existing resource, use a new stack with a different instance name
       DBInstanceIdentifier: !If [NamedInstance, !Ref DBInstance, !Ref "AWS::NoValue"]
       DBName: !If [CreateDB, !Ref CreateDBName, !Ref "AWS::NoValue"]
       AllocatedStorage: !Ref DBAllocatedStorage
