--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -60,7 +60,7 @@ Mappings:
     Testing:
       InstanceType: t2.micro
       InstanceStorage: 22
-      AmiName: "amzn-ami-2017.09.l-amazon-ecs-optimized"
+      AmiName: "amzn-ami-2018.03.b-amazon-ecs-optimized"
       MinSize: "1"
       DefaultDesiredCapacity: "1"
       WarningThreshold: "2"
@@ -68,7 +68,7 @@ Mappings:
     Staging:
       InstanceType: t2.small
       InstanceStorage: 22
-      AmiName: "amzn-ami-2017.09.l-amazon-ecs-optimized"
+      AmiName: "amzn-ami-2018.03.b-amazon-ecs-optimized"
       MinSize: "2"
       DefaultDesiredCapacity: "5"
       WarningThreshold: "9"
