Remove notification ARN from root upload stack
I'm doing this to try to gracefully cycle the notification ARNs on nested stacks, which seem to be stuck

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -494,9 +494,9 @@ Resources:
   UploadLambdaStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
+      # NotificationARNs:
+      #   - Fn::ImportValue:
+      #       !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
