--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -83,6 +83,8 @@ Parameters:
     Type: String
   DovetailStitchLambdaCodeS3ObjectVersion:
     Type: String
+  DovetailBytesLambdaCodeS3ObjectVersion:
+    Type: String
   ProxyPrxOrgCodeS3ObjectVersion:
     Type: String
   PRXUploadAccessKey:
@@ -836,6 +838,24 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/dovetail-stitch-lambda.yml"]]
+      TimeoutInMinutes: 5
+  DovetailBytesLambdaStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
+      Parameters:
+        CodeS3Bucket:
+          Fn::ImportValue:
+            !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+        CodeS3ObjectVersion: !Ref DovetailBytesLambdaCodeS3ObjectVersion
+      Tags:
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/dovetail-bytes-lambda.yml"]]
       TimeoutInMinutes: 5
   ProxyPrxOrgStack:
     Type: "AWS::CloudFormation::Stack"
