--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -85,6 +85,8 @@ Parameters:
     Type: String
   ProxyPrxOrgCodeS3ObjectVersion:
     Type: String
+  DovetailBytesLambdaCodeS3ObjectVersion:
+    Type: String
   PRXUploadAccessKey:
     Type: String
   RadiotopiaRadioArchiveS3ObjectVersion:
