Add testing changes to root stack and upload stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -160,6 +160,8 @@ Mappings:
     StripeProxy:
       prefix: 46
 Resources:
+  Temp1:
+    Type: "AWS::SNS::Topic"
   # Root stacks
   StaticSitesRootStack:
     Type: "AWS::CloudFormation::Stack"
