--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -21,6 +21,8 @@ Parameters:
   LogGroupRetentionPolicyFunctionArn:
     Type: AWS::SSM::Parameter::Value<String>
 Resources:
+  Temp2:
+    Type: "AWS::SNS::Topic"
   # API Gateway
   UploadRestApi:
     Type: "AWS::ApiGateway::RestApi"
