Relocate/rename lambda@edge stacks to relate specifically to dovetail cloudfront

--- a/cdn/dovetail-cdn/dovetail-bytes-lambda-subscription.yml
+++ b/cdn/dovetail-cdn/dovetail-bytes-lambda-subscription.yml
@@ -1,8 +1,8 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
-  Cloudwatch log subscription to ship dovetail-bytes-lambda logs to a kinesis
-  stream. Since the dovetail-bytes edge lambda can execute/log in any cloudfront
-  region, this should probably be deployed manually as a StackSet.
+  Cloudwatch log subscription to ship dovetail-bytes-lambda edge logs to a
+  kinesis stream. Since the dovetail-bytes edge lambda can execute/log in any
+  cloudfront region, this should be deployed manually as a StackSet.
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
