--- a/cdn/dovetail-cdn/dovetail-stitch-lambda-filters.yml
+++ b/cdn/dovetail-cdn/dovetail-stitch-lambda-filters.yml
@@ -1,8 +1,8 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
-  Cloudwatch log metric-filters for the dovetail-stitch-lambda.  Since the edge
-  lambda can execute/log in any cloudfront region, this should probably be
-  deployed manually as a StackSet.
+  Cloudwatch log metric-filters for the dovetail-stitch-lambda edge logs, to
+  capture per-region events. This should be manually deployed as a StackSet in
+  every region of the CloudFront distribution.
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
