Note that the log group has to be created before the L@E function

--- a/cdn/dovetail-cdn/dovetail-bytes-lambda-subscription.yml
+++ b/cdn/dovetail-cdn/dovetail-bytes-lambda-subscription.yml
@@ -1,3 +1,8 @@
+# cdn/dovetail-cdn/dovetail-bytes-lambda-subscription.yml
+#
+# NOTE: since this stack has to create the cloudwatch log group, it has to be
+# deployed _before_ the L@E viewer-response function is added to the
+# dovetail-cdn.yml stack. Otherwise it will fail to create/own the log groups.
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Cloudwatch log subscription to ship dovetail-bytes-lambda edge logs to a
