--- a/cdn/dovetail-cdn/dovetail-stitch-lambda-filters.yml
+++ b/cdn/dovetail-cdn/dovetail-stitch-lambda-filters.yml
@@ -1,3 +1,8 @@
+# cdn/dovetail-cdn/dovetail-stitch-lambda-filters.yml
+#
+# NOTE: since this stack has to create the cloudwatch log group, it must be
+# deployed _before_ the L@E origin-request function is added to the
+# dovetail-cdn.yml stack. Otherwise it will fail to create/own the log groups.
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Cloudwatch log metric-filters for the dovetail-stitch-lambda edge logs, to
