--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -79,6 +79,7 @@ Resources:
           Fn::ImportValue:
             !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
         CodeS3ObjectVersion: !Ref DovetailBytesLambdaCodeS3ObjectVersion
+        EnvironmentType: !Ref EnvironmentType
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
