--- a/stacks/serverless/dovetail-bytes-lambda.yml
+++ b/stacks/serverless/dovetail-bytes-lambda.yml
@@ -5,6 +5,8 @@ Parameters:
     Type: String
   CodeS3ObjectVersion:
     Type: String
+  EnvironmentType:
+    Type: String
 Resources:
   DovetailBytesLambdaExecutionIAMRole:
     Type: "AWS::IAM::Role"
