Add GitHub domain verification records for prx.org

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -48,6 +48,16 @@ Resources:
           TTL: "300"
           Type: TXT
           Name: !Sub google._domainkey.${Domain}
+        - ResourceRecords:
+            - '"72a959b7c3"'
+          TTL: "300"
+          Type: TXT
+          Name: !Sub _github-challenge-PRX.${Domain}
+        - ResourceRecords:
+            - '"345d72b442"'
+          TTL: "300"
+          Type: TXT
+          Name: !Sub _github-challenge-PRX.www.${Domain}
   Highwinds:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
