Add relative file path references to templates

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -1,3 +1,4 @@
+# cd/cd.yml
 # This creates a CodePipeline pipeline (and associates resources) for handling
 # deployments and testing of the platform. It watches three sources for changes,
 # which trigger the pipeline: the meta.prx.org repo (used for acceptance
