--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -1,3 +1,4 @@
+# cdn/single-origin.yml
 # When creating a CloudFront distribution for an S3 bucket, it is recommended
 # that the bucket remains private and CloudFront is given access to it via an
 # Origin Access Identity. This template can create that identity, but it cannot
