--- a/db/elasticache-memcached.yml
+++ b/db/elasticache-memcached.yml
@@ -1,3 +1,4 @@
+# db/elasticache-memcached.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
   AWS CloudFormation Memcached Template: Template to create Elasticache Memcached cluster
