--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -1,3 +1,4 @@
+# db/mysql-instance.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
   AWS CloudFormation RDS Template: Template to create RDS MySQL v5.5 instance.
