--- a/etc/adzerk-poller.yml
+++ b/etc/adzerk-poller.yml
@@ -1,3 +1,4 @@
+# etc/adzerk-poller.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates a Lambda function that polls the Adzerk API and finds ad flight
