--- a/etc/workable-poller.yml
+++ b/etc/workable-poller.yml
@@ -1,3 +1,4 @@
+# etc/workable-poller.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates a Lambda function that polls the Workable API and finds new
