--- a/stacks/analytics-ingest-lambda.yml
+++ b/stacks/analytics-ingest-lambda.yml
@@ -1,3 +1,4 @@
+# stacks/analytics-ingest-lambda.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Analytics ingest lambda functions
 Conditions:
