--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -1,3 +1,4 @@
+# stacks/certificate.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates a wildcard ACM certificate for the standard VPC created by the root
