--- a/stacks/cms-image-lambda.yml
+++ b/stacks/cms-image-lambda.yml
@@ -1,3 +1,4 @@
+# stacks/cms-image-lambda.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Image processing Lambda function for CMS
 Parameters:
