--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -1,3 +1,4 @@
+# stacks/container-apps/root.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Apps that run in containers (i.e. Docker)
