--- a/stacks/dovetail-stitch-lambda.yml
+++ b/stacks/dovetail-stitch-lambda.yml
@@ -1,3 +1,4 @@
+# stacks/dovetail-stitch-lambda.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Dovetail stitch lambda function
 Conditions:
