--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -1,3 +1,4 @@
+# stacks/dovetail.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: dovetail.prx.org application running in Docker
 Conditions:
