--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -1,3 +1,4 @@
+# stacks/ecs.yml
 # NOTE EC2 Key Pairs cannot be created by CloudFormation templates, and are
 # region specific, so you need to create them before launching a stack, and
 # pass the name in as a parameter
