--- a/stacks/fourohfour.prx.org.yml
+++ b/stacks/fourohfour.prx.org.yml
@@ -1,3 +1,4 @@
+# stacks/fourohfour.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: fourohfour.prx.org application running in Docker
 Mappings:
