--- a/stacks/legacy-support/root.yml
+++ b/stacks/legacy-support/root.yml
@@ -1,3 +1,4 @@
+# stacks/legacy-support/root.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Legacy Support (resources to support older apps moved to AWS)
