--- a/stacks/legacy-support/stripe-proxy.yml
+++ b/stacks/legacy-support/stripe-proxy.yml
@@ -1,3 +1,4 @@
+# stacks/stripe-proxy/root.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Docker proxy server for stripe with its own ALB
