--- a/stacks/metrics.prx.org.yml
+++ b/stacks/metrics.prx.org.yml
@@ -1,3 +1,4 @@
+# stacks/metrics.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: metrics.prx.org application running in Docker
 Mappings:
