--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -1,3 +1,4 @@
+# stacks/play.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: play.prx.org application running in Docker
 Mappings:
