--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -1,3 +1,4 @@
+# stacks/proxy.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Top-level proxy server for www.prx.org
 Conditions:
