--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -1,3 +1,4 @@
+# stacks/publish.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: publish.prx.org application running in Docker
 Mappings:
