--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1,3 +1,4 @@
+# stacks/root.yml
 # Generally this template is used to launch stacks from the bootstrapping
 # CodePipeline. Primarily is is simply a wrapper around individial app- and
 # service-specific templates, which get nested into this template and are
