--- a/stacks/static-sites/beta.prx.org.yml
+++ b/stacks/static-sites/beta.prx.org.yml
@@ -1,3 +1,4 @@
+# stacks/static-sites/beta.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Beta.prx.org listener site
 Parameters:
