--- a/stacks/static-sites/radio.radiotopia.fm.yml
+++ b/stacks/static-sites/radio.radiotopia.fm.yml
@@ -1,3 +1,4 @@
+# stacks/static-sites/radio.radiotopia.fm.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Radiotopia Radio static site
 Parameters:
