--- a/stacks/static-sites/root.yml
+++ b/stacks/static-sites/root.yml
@@ -1,3 +1,4 @@
+# stacks/static-sites/root.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Sites that are deployed through S3 as static websites
