--- a/stacks/web-alb-application.yml
+++ b/stacks/web-alb-application.yml
@@ -1,3 +1,4 @@
+# stacks/web-alb-application.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Docker web application with optional worker, with its own ALB
