--- a/storage/storage.yml
+++ b/storage/storage.yml
@@ -1,3 +1,4 @@
+# storage/storage.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates the standard S3 buckets that are necessary for launching the rest of
