--- a/cdn/dovetail-cdn.yml
+++ b/cdn/dovetail-cdn.yml
@@ -1,3 +1,4 @@
+# cdn/dovetail-cdn.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates a CloudFront distribution to origin-pull from a Dovetail S3 bucket,
