--- a/cdn/feed-cdn.yml
+++ b/cdn/feed-cdn.yml
@@ -1,3 +1,4 @@
+# cdn/feed-cdn.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates a CloudFront distribution and some associated resources to act as a
