--- a/db/replication-alarms.yml
+++ b/db/replication-alarms.yml
@@ -1,3 +1,4 @@
+# db/replication-alarms.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates alarms related to ssh tunnel remote server -> rds db replication
