--- a/etc/aws-daily-cost-report.yml
+++ b/etc/aws-daily-cost-report.yml
@@ -1,3 +1,4 @@
+# etc/aws-daily-cost-report.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates a Lambda function that runs some basic reports against Cost Explorer,
