--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -1,3 +1,4 @@
+# notifications/notifications.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates foundational resources needed to handle infrastructure-related
