--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -1,3 +1,4 @@
+# secrets/secrets.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates the bucket and lambda needed to support application secrets
