--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -1,3 +1,4 @@
+# stacks/load-balancers.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates application load balancers that can be reused for multiple
