--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -1,3 +1,4 @@
+# stacks/castle.prx.org.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: castle.prx.org application running in Docker
 Mappings:
