Fix path comment for Eventbrite template

--- a/etc/eventbrite-webhooks.yml
+++ b/etc/eventbrite-webhooks.yml
@@ -1,4 +1,4 @@
-# stacks/serverless/tower.radiotopia.fm.yml
+# etc/eventbrite-webhooks.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Handles Eventbrite webhooks
 Parameters:
