Add GCP subdomain to prx.org

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1503,6 +1503,16 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub catapult.${Domain}
+        - ResourceRecords:
+            - verify.squarespace.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub 4a4scdp8wg8t76rfa22j.${Domain}
+        - ResourceRecords:
+            - ext-cust.squarespace.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub googlecp.${Domain}
   GSuite:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
