--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -102,6 +102,8 @@ Resources:
         SecretsVersion: !Ref ExchangeSecretsVersion
         AppName: "exchange"
         CreateWorker: "true"
+        DesiredWebsProduction: "3"
+        DesiredWorkersProduction: "6"
         ContainerPort: "3000"
         HealthCheckPath: "/"
       Tags:
