Add new Zendesk CNAME verification records

--- a/dns/radiotopia.fm-hosted_zone.yml
+++ b/dns/radiotopia.fm-hosted_zone.yml
@@ -88,6 +88,32 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub k1._domainkey.${Domain}
+  Zendesk:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: Zendesk
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - mail1.zendesk.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub zendesk1.${Domain}
+        - ResourceRecords:
+            - mail2.zendesk.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub zendesk2.${Domain}
+        - ResourceRecords:
+            - mail3.zendesk.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub zendesk3.${Domain}
+        - ResourceRecords:
+            - mail4.zendesk.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub zendesk4.${Domain}
   Feedburner:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
