--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1487,6 +1487,26 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub help.${Domain}
+        - ResourceRecords:
+            - mail1.zendesk.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub zendesk1.${Domain}
+        - ResourceRecords:
+            - mail2.zendesk.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub zendesk2.${Domain}
+        - ResourceRecords:
+            - mail3.zendesk.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub zendesk3.${Domain}
+        - ResourceRecords:
+            - mail4.zendesk.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub zendesk4.${Domain}
   Squarespace:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
