Fix CI Lambda function description

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -762,7 +762,7 @@ Resources:
           Fn::ImportValue:
             !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: ci/codebuild-callback-handler.zip
-      Description: Handles GitHub events forwarded from the endpoint
+      Description: Handles post-build callbacks from CodeBuild CI projects
       Environment:
         Variables:
           CI_STATUS_TOPIC_ARN: !Ref CiStatusSnsTopic
