--- a/stacks/serverless/dovetail-counts-lambda.yml
+++ b/stacks/serverless/dovetail-counts-lambda.yml
@@ -81,6 +81,12 @@ Resources:
       Role: !GetAtt DovetailCountsLambdaExecutionIAMRole.Arn
       Runtime: nodejs8.10
       Timeout: 10
+      VpcConfig:
+        SecurityGroupIds: !GetAtt VPC.DefaultSecurityGroup
+        SubnetIds:
+          - !Ref VPCSubnet1
+          - !Ref VPCSubnet2
+          - !Ref VPCSubnet3
       Tags:
         - Key: Project
           Value: Dovetail
