Get security group directly out of VPC stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -193,7 +193,7 @@ Resources:
       Parameters:
         InfrastructureStorageStackName: !Ref InfrastructureStorageStackName
         InfrastructureNotificationsStackName: !Ref NotificationsStackName
-        VPC: !GetAtt VPCStack.Outputs.VPC
+        VPCSecurityGroup: !GetAtt VPCStack.Outputs.SecurityGroup
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
         VPCSubnet3: !GetAtt VPCStack.Outputs.Subnet3
