--- a/stacks/serverless/dovetail-counts-lambda.yml
+++ b/stacks/serverless/dovetail-counts-lambda.yml
@@ -14,8 +14,8 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
-  VPC:
-    Type: "AWS::EC2::VPC::Id"
+  VPCSecurityGroup:
+    Type: "AWS::EC2::SecurityGroup"
   VPCSubnet1:
     Type: "AWS::EC2::Subnet::Id"
   VPCSubnet2:
@@ -82,7 +82,7 @@ Resources:
       Runtime: nodejs8.10
       Timeout: 10
       VpcConfig:
-        SecurityGroupIds: !GetAtt VPC.DefaultSecurityGroup
+        SecurityGroupIds: !Ref VPCSecurityGroup
         SubnetIds:
           - !Ref VPCSubnet1
           - !Ref VPCSubnet2
