--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -11,8 +11,8 @@ Parameters:
     Type: String
   InfrastructureNotificationsStackName:
     Type: String
-  VPC:
-    Type: "AWS::EC2::VPC::Id"
+  VPCSecurityGroup:
+    Type: "AWS::EC2::SecurityGroup"
   VPCSubnet1:
     Type: "AWS::EC2::Subnet::Id"
   VPCSubnet2:
@@ -117,7 +117,7 @@ Resources:
         CodeS3ObjectVersion: !Ref DovetailCountsLambdaCodeS3ObjectVersion
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-        VPC: !Ref VPC
+        VPCSecurityGroup: !Ref VPCSecurityGroup
         VPCSubnet1: !Ref VPCSubnet1
         VPCSubnet2: !Ref VPCSubnet2
         VPCSubnet3: !Ref VPCSubnet3
