--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -355,6 +355,10 @@ Outputs:
     Description: >
       Resource ID for the VPC
     Value: !Ref VPC
+  SecurityGroup:
+    Description: >
+      Default Security Group for the VPC
+    Value: !GetAtt VPC.DefaultSecurityGroup
   Subnet1:
     Description: >
       Resource ID (eg subnet-e19f0178) for subnet 1
