--- a/stacks/serverless/dovetail-counts-lambda.yml
+++ b/stacks/serverless/dovetail-counts-lambda.yml
@@ -15,7 +15,7 @@ Parameters:
   EnvironmentTypeAbbreviation:
     Type: String
   VPCSecurityGroup:
-    Type: "AWS::EC2::SecurityGroup"
+    Type: "AWS::EC2::SecurityGroup::Id"
   VPCSubnet1:
     Type: "AWS::EC2::Subnet::Id"
   VPCSubnet2:
@@ -82,7 +82,8 @@ Resources:
       Runtime: nodejs8.10
       Timeout: 10
       VpcConfig:
-        SecurityGroupIds: !Ref VPCSecurityGroup
+        SecurityGroupIds:
+          - !Ref VPCSecurityGroup
         SubnetIds:
           - !Ref VPCSubnet1
           - !Ref VPCSubnet2
