--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -12,7 +12,7 @@ Parameters:
   InfrastructureNotificationsStackName:
     Type: String
   VPCSecurityGroup:
-    Type: "AWS::EC2::SecurityGroup"
+    Type: "AWS::EC2::SecurityGroup::Id"
   VPCSubnet1:
     Type: "AWS::EC2::Subnet::Id"
   VPCSubnet2:
