Change to interface

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -98,6 +98,7 @@ Resources:
       RouteTableIds:
         - !Ref RouteTable
       ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
+      VpcEndpointType: Interface
       VpcId: !Ref VPC
   KinesisEndpoint:
     Type: "AWS::EC2::VPCEndpoint"
@@ -105,6 +106,7 @@ Resources:
       RouteTableIds:
         - !Ref RouteTable
       ServiceName: !Sub "com.amazonaws.${AWS::Region}.kinesis-streams"
+      VpcEndpointType: Interface
       VpcId: !Ref VPC
   Subnet1:
     Type: "AWS::EC2::Subnet"
