S3 must be gateway; kinesis is interface

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -98,14 +98,19 @@ Resources:
       RouteTableIds:
         - !Ref RouteTable
       ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
-      VpcEndpointType: Interface
+      VpcEndpointType: Gateway
       VpcId: !Ref VPC
   KinesisEndpoint:
     Type: "AWS::EC2::VPCEndpoint"
     Properties:
-      RouteTableIds:
-        - !Ref RouteTable
+      PrivateDnsEnabled: true
+      SecurityGroupIds:
+        - !GetAtt VPC.DefaultSecurityGroup
       ServiceName: !Sub "com.amazonaws.${AWS::Region}.kinesis-streams"
+      SubnetIds:
+        - !Ref Subnet1
+        - !Ref Subnet2
+        - !Ref Subnet3
       VpcEndpointType: Interface
       VpcId: !Ref VPC
   Subnet1:
