Allow 443 from anywhere for kinesis endpoint

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -100,12 +100,34 @@ Resources:
       ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
       VpcEndpointType: Gateway
       VpcId: !Ref VPC
+  KinesisEndpointSecurityGroup:
+    Type: "AWS::EC2::SecurityGroup"
+    Properties:
+      VpcId: !Ref VPC
+      GroupDescription: Allow kinesis traffic
+      SecurityGroupIngress:
+        - CidrIp: 0.0.0.0/0
+          IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+      Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: Name
+          Value: !Sub Platform-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   KinesisEndpoint:
     Type: "AWS::EC2::VPCEndpoint"
     Properties:
       PrivateDnsEnabled: true
       SecurityGroupIds:
         - !GetAtt VPC.DefaultSecurityGroup
+        - !Ref KinesisEndpointSecurityGroup
       ServiceName: !Sub "com.amazonaws.${AWS::Region}.kinesis-streams"
       SubnetIds:
         - !Ref Subnet1
