Default for optional param

--- a/stacks/container-apps/web-application.yml
+++ b/stacks/container-apps/web-application.yml
@@ -26,6 +26,7 @@ Parameters:
     Type: String
   PlatformALBAltListenerPriorityPrefix:
     Type: String
+    Default: ""
   # ECS Cluster ################################################################
   ECSCluster:
     Type: String
