--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -80,6 +80,9 @@ Resources:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
     Properties:
       # IpAddressType: dualstack
+      LoadBalancerAttributes:
+        - Key: idle_timeout.timeout_seconds
+          Value: 150
       Scheme: internet-facing
       SecurityGroups:
         - !Ref PlatformSecurityGroup
