--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -123,6 +123,7 @@ Resources:
         VPCSubnet3: !Ref VPCSubnet3
         KinesisIn: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/KINESIS_IN"
         KinesisOut: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/KINESIS_OUT"
+        Kinesis404: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/KINESIS_404"
         RedisUrl: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/REDIS_URL"
         S3Bucket: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/S3_BUCKET"
         S3Prefix: !Sub "/prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/S3_PREFIX"
